--- a/css/styles.css
+++ b/css/styles.css
@@ -79,17 +79,25 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
-    color: #2e2f42;
+    
 }
 
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #2e2f42;
+}
+
+.menu-button {
+    background: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    cursor: pointer;
 }
 
 .menu-icon {
@@ -125,7 +133,7 @@ a {
 .main-page-name {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #FFFFFF;
@@ -138,7 +146,7 @@ a {
     font-weight: 500;
     letter-spacing: 0.04em;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     background-color: #4d5ae5;
     color: #fff;
     cursor: pointer;
@@ -163,6 +171,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 72px;
+    margin-bottom: 96px;
     
 }
 
@@ -173,7 +182,7 @@ a {
 .features-name {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
@@ -183,7 +192,7 @@ a {
 .features-desc {
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     text-align: left;
@@ -198,7 +207,7 @@ a {
 .team-name {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
@@ -231,7 +240,7 @@ a {
     margin-top: 32px;
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
 }
@@ -278,7 +287,7 @@ a {
 .portfolio {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     margin-bottom: 72px;
@@ -302,7 +311,7 @@ a {
 
 .portfolio-desc {
     text-align: left;
-    margin: 8px 16px 32px;
+    margin: 0 16px 32px;
 }
 
 .portfolio-content {
@@ -586,7 +595,7 @@ input::placeholder {
 .menu-nav-item {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
@@ -606,7 +615,7 @@ input::placeholder {
 .menu-contacts-item {
     font-weight: 500;
         font-size: 20px;
-        line-height: 120%;
+        line-height: 1.2;
         letter-spacing: 0.02em;
         color: #434455;
 }
@@ -685,7 +694,7 @@ input::placeholder {
     color: black;
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
     margin-bottom: 16px;
@@ -760,7 +769,7 @@ input::placeholder {
     display: block;
     font-weight: 400;
     font-size: 12px;
-    line-height: 117%;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
     margin-bottom: 4px;
@@ -903,6 +912,10 @@ input::placeholder {
     align-items: center;
     position: relative;
 }
+    .menu-button {
+        display: none;
+    }
+
     .menu-icon {
         visibility: hidden;
         opacity: 0;
@@ -965,7 +978,7 @@ input::placeholder {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    line-height: 117%;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1072,8 +1085,8 @@ input::placeholder {
         max-width: 408px;
         width: 408px;
         padding: 72px 24px 24px;
+    } 
     }
-}
 
 
     @media screen and (min-width: 1158px) {
@@ -1120,9 +1133,9 @@ input::placeholder {
 
     }
     
-        .features-item {
-            flex-basis: calc((100% - 72px) / 4);
-        }
+    .features-item {
+        flex-basis: calc((100% - 72px) / 4);
+    }
 
     .features-icon {
         visibility: visible;
@@ -1137,106 +1150,106 @@ input::placeholder {
         height: 112px;
                 }
 
-.features-logo {
-    width: 64px;
-    height: 64px;
-    display: block;
-}
- 
-.team-content {
-    flex-wrap: nowrap;
-}
+    .features-logo {
+        width: 64px;
+        height: 64px;
+        display: block;
+    }
+    
+    .team-content {
+        flex-wrap: nowrap;
+    }
 
-.portfolio-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 48px 24px;
-}
+    .portfolio-content {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 48px 24px;
+    }
 
-.overlay-box {
-    position: relative;
-    overflow: hidden;
-}
+    .overlay-box {
+        position: relative;
+        overflow: hidden;
+    }
 
-.overlay {
-    visibility: visible;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #4D5AE5;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-item {
-    flex-basis: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    .overlay {
+        visibility: visible;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #4D5AE5;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .portfolio-item {
+        flex-basis: calc((100% - 48px) / 3);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.portfolio-item:hover {
-    box-shadow:
-        0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
-}
+    .portfolio-item:hover {
+        box-shadow:
+            0px 2px 1px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 1px 6px rgba(46, 47, 66, 0.08);
+    }
 
-.portfolio-item:hover .overlay {
-    transform: translateY(0);
+    .portfolio-item:hover .overlay {
+        transform: translateY(0);
 
-}
+    }
 
-.overlay-text {
-    color: #F4F4FD;
-    padding: 40px 32px;
-    margin: 0;
-}
+    .overlay-text {
+        color: #F4F4FD;
+        padding: 40px 32px;
+        margin: 0;
+    }
 
-.portfolio-item-name {
-    text-align: left;
-    margin-bottom: 8px;
+    .portfolio-item-name {
+        text-align: left;
+        margin-bottom: 8px;
 
-}
+    }
 
-.portfolio-desc {
-    text-align: left;
-    margin-bottom: 32px;
-}
+    .portfolio-desc {
+        text-align: left;
+        margin-bottom: 32px;
+    }
 
-.portfolio-content>li {
-    border-bottom: 1px solid #e7e9fc;
-}
+    .portfolio-content>li {
+        border-bottom: 1px solid #e7e9fc;
+    }
 
 
-.footer-container {
-    flex-wrap: nowrap;
-    align-items: flex-start;
-    gap: 80px;
-}
+    .footer-container {
+        flex-wrap: nowrap;
+        align-items: flex-start;
+        gap: 80px;
+    }
 
-.backdrop {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .backdrop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
- .pop-up-review {
-     width: 408px;
-     max-width: 408px;
-     padding: 72px 24px 24px;
- }
+    .pop-up-review {
+        width: 408px;
+        max-width: 408px;
+        padding: 72px 24px 24px;
+    }
 
- .checkbox-label {
-     margin-bottom: 24px;
- }
+    .checkbox-label {
+        margin-bottom: 24px;
+    }
 
-}
+    }
 
- @media screen and (min-width: 1158px) and (min-resolution: 192dpi),
- screen and (min-width: 1158px) and (min-resolution: 2dppx) {
-     .main-page {
-         background-image:
-             linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-             url("../images/hero_desk_2x.jpg");
-     }
- }
+        @media screen and (min-width: 1158px) and (min-resolution: 192dpi),
+        screen and (min-width: 1158px) and (min-resolution: 2dppx) {
+            .main-page {
+                background-image:
+                    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                    url("../images/hero_desk_2x.jpg");
+            }
+        }
