--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@ ul {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 body {
@@ -124,9 +126,9 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 72px 52px;
+    padding: 72px 0;
     height: 432px;
-    max-width: 320px;
+    max-width: none;
     margin: 0 auto;
 }
 
@@ -167,16 +169,21 @@ a {
     background-color: #404bbf;
 }
 
+.features {
+    padding: 96px 0;
+}
+
+
 .features-content {
     display: flex;
     flex-direction: column;
     gap: 72px;
-    margin-bottom: 96px;
+    margin-bottom: 0;
     
 }
 
 .features-icon {
-    visibility: hidden;
+    display: none;
 }
 
 .features-name {
@@ -519,7 +526,7 @@ input::placeholder {
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     z-index: 1001;
     opacity: 0;
     visibility: hidden;
@@ -527,6 +534,7 @@ input::placeholder {
     overflow-y: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
             visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(46, 47, 66, 0.4);
 }
 
 .pop-up-menu.is-open {
@@ -536,9 +544,13 @@ input::placeholder {
 }
 
 .menu-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 48px;
     width: 100%;
+    height: auto;
     background-color: #FCFCFC; 
-    position: relative;
     max-width: 320px;
     position: relative;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08),
@@ -546,9 +558,7 @@ input::placeholder {
         0px 1px 6px rgba(0, 0, 0, 0.08);
 
     overflow-y: auto;
-    max-height: none;
     overflow: visible;
-    margin: 0 auto;
     }
 
 .pop-up-menu-close-button {
@@ -609,7 +619,6 @@ input::placeholder {
     flex-direction: column;
     gap: 24px;
     margin-left: 16px;
-    margin-bottom: 48px;
 }
 
 .menu-contacts-item {
@@ -625,10 +634,10 @@ input::placeholder {
 }
  
 .menu-socials {
+    margin-top: auto;
     display: flex;
     gap: 40px;
     margin-left: 16px;
-    margin-bottom: 40px;
 }
 .menu-socials-item {
     background: #4d5ae5;
@@ -1121,7 +1130,7 @@ input::placeholder {
     }
 
     .features {
-        padding-top: 120px;
+        padding-top: 120px 0;
     }
 
     .features-content {
@@ -1253,3 +1262,12 @@ input::placeholder {
                     url("../images/hero_desk_2x.jpg");
             }
         }
+
+                @media screen and (min-width: 768px) and (min-resolution: 192dpi),
+                screen and (min-width: 768px) and (min-resolution: 2dppx) {
+                    .main-page {
+                        background-image:
+                            linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                            url("../images/hero_tab_2x.jpg");
+                    }
+                }
