--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ a {
     background-position: center;
     padding: 72px 0;
     height: 432px;
-    max-width: none;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -376,7 +376,7 @@ footer {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     text-align: left;
-    max-width: 264px
+    max-width: 264px;
 }
 
 .footer-media {
@@ -534,7 +534,8 @@ input::placeholder {
     overflow-y: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
             visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: rgba(46, 47, 66, 0.4);
+    background-color: #fff;
+    padding: 16px;
 }
 
 .pop-up-menu.is-open {
@@ -547,9 +548,8 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 48px;
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: #FCFCFC; 
     max-width: 320px;
     position: relative;
@@ -559,6 +559,7 @@ input::placeholder {
 
     overflow-y: auto;
     overflow: visible;
+    margin: 16px auto;
     }
 
 .pop-up-menu-close-button {
@@ -598,8 +599,7 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-left: 16px;
-    margin-bottom: 168px;
+    margin-left: 16px; 
 }
 
 .menu-nav-item {
@@ -613,6 +613,7 @@ input::placeholder {
 .menu-active-link {
     color: #404BBF;
 }
+
 
 .menu-contacts-list {
     display:flex;
@@ -634,10 +635,13 @@ input::placeholder {
 }
  
 .menu-socials {
-    margin-top: auto;
     display: flex;
     gap: 40px;
     margin-left: 16px;
+    position: relative;
+    bottom: 40px;
+    
+    
 }
 .menu-socials-item {
     background: #4d5ae5;
@@ -896,7 +900,7 @@ input::placeholder {
     /* tablet */
 
     .container {
-        max-width: 768px;
+        max-width: 100%;
         margin: 0 auto;
         padding: 0 24px;
     }
@@ -1130,7 +1134,7 @@ input::placeholder {
     }
 
     .features {
-        padding-top: 120px 0;
+        padding-top: 120px;
     }
 
     .features-content {
@@ -1254,6 +1258,25 @@ input::placeholder {
 
     }
 
+
+         @media screen and (max-width: 767px) and (min-resolution: 192dpi),
+         screen and (max-width: 767px) and (min-resolution: 2dppx) {
+             .main-page {
+                 background-image:
+                     linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                     url("../images/hero_m_2x.jpg");
+             }
+         }
+
+
+        @media screen and (min-width: 768px) and (min-resolution: 192dpi),
+        screen and (min-width: 768px) and (min-resolution: 2dppx) {
+            .main-page {
+                background-image:
+                    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                    url("../images/hero_tab_2x.jpg");
+            }
+        
         @media screen and (min-width: 1158px) and (min-resolution: 192dpi),
         screen and (min-width: 1158px) and (min-resolution: 2dppx) {
             .main-page {
@@ -1262,12 +1285,3 @@ input::placeholder {
                     url("../images/hero_desk_2x.jpg");
             }
         }
-
-                @media screen and (min-width: 768px) and (min-resolution: 192dpi),
-                screen and (min-width: 768px) and (min-resolution: 2dppx) {
-                    .main-page {
-                        background-image:
-                            linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-                            url("../images/hero_tab_2x.jpg");
-                    }
-                }
