--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ a {
     padding: 72px 0;
     height: 432px;
     width: 100%;
+    max-width: 320px;
     margin: 0 auto;
 }
 
@@ -208,7 +209,7 @@ a {
 .team {
     background: #f4f4fd;
     text-transform: capitalize;
-    padding: 96px 28px;
+    padding: 96px 0;
 }
 
 .team-name {
@@ -336,14 +337,11 @@ a {
             0px 1px 6px rgba(46, 47, 66, 0.08);
     }
 
-footer {
-    background: #2e2f42;
-    width: 100%;
-;} 
 
 .bottom {
     padding: 96px 16px;
     background: #2e2f42;
+    width: 100%;
 }
 
 .footer-container {
@@ -903,10 +901,11 @@ input::placeholder {
         width: 100%;
         max-width: 768px;
         margin: 0 auto;
-        padding: 0 24px;
+        padding: 0 16px;
     }
 
     .main-page {
+        width: 100%;
         max-width: 768px;
     }
 
@@ -961,7 +960,6 @@ input::placeholder {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
-        padding: 18px 0;
         position: relative;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
