--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ a {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    width: 288px;
     color: #FFFFFF;
     margin-bottom: 72px;
     
@@ -209,7 +210,8 @@ a {
 .team {
     background: #f4f4fd;
     text-transform: capitalize;
-    padding: 96px 0;
+    padding-top: 96px;
+        padding-bottom: 96px;
 }
 
 .team-name {
@@ -230,12 +232,13 @@ a {
 
 }
 
+.team-items {
+    padding: 32px 16px 32px 16px;
+}
 .team-list {
     background-color: #FFFFFF;
     border-radius: 0 0 4px 4px;
-    padding: 0px 0px 32px;
     width: 264px;
-    height: 428px;
     box-shadow:
         0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -245,7 +248,6 @@ a {
 .team-member {
     text-align: center;
     margin-bottom: 8px;
-    margin-top: 32px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -302,9 +304,12 @@ a {
 }
 
 .overlay {
-    visibility: hidden;
+    display:none;
 }
 
+.portfolio-line {
+    padding: 32px 16px;
+}
 .portfolio-image {
     width: 100%;
         height: auto;
@@ -313,13 +318,11 @@ a {
 
 .portfolio-item-name {
     text-align: left;
-    margin: 0 16px 8px;
-    padding-top: 32px;
+    margin-bottom: 8px;
 }
 
 .portfolio-desc {
     text-align: left;
-    margin: 0 16px 32px;
 }
 
 .portfolio-content {
@@ -339,7 +342,6 @@ a {
 
 
 .bottom {
-    padding: 96px 16px;
     background: #2e2f42;
     width: 100%;
 }
@@ -348,6 +350,8 @@ a {
     display:flex;
     flex-direction: column;
     gap: 72px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .footer-link {
@@ -445,7 +449,7 @@ input::placeholder {
 }
 
 .subscribe-email {
-    min-width: 264px;
+    width: 288px;
     height: 40px;
 
     border: 1px solid #FFFFFF;
@@ -533,7 +537,7 @@ input::placeholder {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
             visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #fff;
-    padding: 16px;
+    padding: 32px 16px;
 }
 
 .pop-up-menu.is-open {
@@ -545,7 +549,6 @@ input::placeholder {
 .menu-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
     height: 100%;
     background-color: #FCFCFC; 
@@ -598,6 +601,7 @@ input::placeholder {
     flex-direction: column;
     gap: 40px;
     margin-left: 16px; 
+    margin-bottom: 168px;
 }
 
 .menu-nav-item {
@@ -612,6 +616,9 @@ input::placeholder {
     color: #404BBF;
 }
 
+.menu-contacts {
+    margin-bottom: 48px;
+}
 
 .menu-contacts-list {
     display:flex;
@@ -626,6 +633,7 @@ input::placeholder {
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #434455;
+        font-style: normal;
 }
 
 .menu-phone {
@@ -636,10 +644,6 @@ input::placeholder {
     display: flex;
     gap: 40px;
     margin-left: 16px;
-    position: relative;
-    bottom: 40px;
-    
-    
 }
 .menu-socials-item {
     background: #4d5ae5;
@@ -946,6 +950,7 @@ input::placeholder {
     .nav-list {
         display: flex;
         gap: 40px;
+        padding: 24px;
     }
     .contacts {
         display:flex;
@@ -975,7 +980,7 @@ input::placeholder {
     content: "";
     position: absolute;
     left: 0;
-    bottom: -1px;
+    bottom: -28px;
     height: 4px;
     width: 100%;
     background-color: #404BBF;
@@ -1017,6 +1022,7 @@ input::placeholder {
 .main-page-name {
     font-weight: 700;
     font-size: 56px;
+    width: 496px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #FFFFFF;
@@ -1031,7 +1037,6 @@ input::placeholder {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 72px 24px;
-    margin-bottom: 96px;
 }
 
 .features-item {
@@ -1070,6 +1075,9 @@ input::placeholder {
         flex-wrap: wrap;
         gap: 72px 24px;
         align-items: flex-start;
+        width: 584px;
+        padding-top: 96px;
+        padding-bottom: 96px;
 }
 
 
@@ -1113,6 +1121,16 @@ input::placeholder {
             max-width: 1158px;
             padding: 0 15px;
         }
+
+    .nav-list {
+        margin-left: 76px;
+    }
+    .nav-item {
+        font-weight: 500;
+            font-size: 16px;
+            line-height: 150%;
+            letter-spacing: 0.02em;
+    }
     .contacts-list {
         display:flex;
         flex-direction: row;
@@ -1123,6 +1141,10 @@ input::placeholder {
 
     .contacts-item {
         white-space: nowrap;
+        font-weight: 400;
+            font-size: 16px;
+            line-height: 150%;
+            letter-spacing: 0.02em;
     }
 
     .main-page {
@@ -1140,6 +1162,7 @@ input::placeholder {
 
     .features {
         padding-top: 120px;
+        padding-bottom: 120px;
     }
 
     .features-content {
@@ -1150,7 +1173,16 @@ input::placeholder {
         gap: 24px;
 
     }
-    
+    .features-name {
+        font-weight: 400;
+            font-size: 20px;
+            line-height: 120%;
+            letter-spacing: 0.02em;
+    }
+
+    .features-desc {
+        font-weight: 500;
+    }
     .features-item {
         flex-basis: calc((100% - 72px) / 4);
     }
@@ -1174,8 +1206,18 @@ input::placeholder {
         display: block;
     }
     
+    .team {
+        padding-top: 120px;
+            padding-bottom: 120px;
+    }
+    
     .team-content {
         flex-wrap: nowrap;
+    }
+
+    .section-portfolio {
+        padding-top: 120px;
+            padding-bottom: 120px;
     }
 
     .portfolio-content {
@@ -1187,10 +1229,11 @@ input::placeholder {
     .overlay-box {
         position: relative;
         overflow: hidden;
+
     }
 
     .overlay {
-        visibility: visible;
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
@@ -1203,6 +1246,7 @@ input::placeholder {
     .portfolio-item {
         flex-basis: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: none;
     }
 
     .portfolio-item:hover {
@@ -1215,6 +1259,10 @@ input::placeholder {
     .portfolio-item:hover .overlay {
         transform: translateY(0);
 
+    }
+
+    .portfolio-line {
+        box-shadow: none;
     }
 
     .overlay-text {
@@ -1242,7 +1290,10 @@ input::placeholder {
     .footer-container {
         flex-wrap: nowrap;
         align-items: flex-start;
+        justify-content: center;
         gap: 80px;
+        padding-top: 100px;
+        padding-bottom: 100px;
     }
 
     .backdrop {
